--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ passlib==1.7.1
 pkg-resources==0.0.0
 pyasn1==0.4.7
 pysmb==1.1.27
+python-dotenv==0.10.3
 six==1.12.0
 SQLAlchemy==1.3.8
 SQLAlchemy-Utils==0.34.2
@@ -21,3 +22,4 @@ Werkzeug==0.16.0
 WTForms==2.2.1
 WTForms-Alchemy==0.16.9
 WTForms-Components==0.10.4
+WTForms-SQLAlchemy==0.1
