--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 8080;
     charset utf-8;
+    client_max_body_size 50M;
 
     location / {
         proxy_pass http://web:8000;
