--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - celery
     expose:
       - "8000"
+    env_file:
+      - ./secret.env
   celery:
     <<: *webclient-service
     command: celery worker --app=app.celery --concurrency=2 --loglevel=WARN
