--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,13 +31,18 @@ services:
     image: yarranyu/webclient-nginx:latest
     ports:
       - "80:8080"
+      - "443:4443"
     depends_on:
       - web
+    volumes: 
+      - 'certs:/etc/nginx/certs'
   redis:
     image: redis
     expose:
       - "6739"
 volumes:
+  certs:
+    name: yarrawebclient_certs
   data:
     name: yarrawebclient_data
   temp:
