--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,5 @@
 FROM nginxinc/nginx-unprivileged:latest
 
+RUN mkdir /etc/nginx/certs && chown nginx /etc/nginx/certs
+
 ADD default.conf /etc/nginx/conf.d/default.conf
