--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,17 @@
 server {
-    listen 8080;
+    listen 8080 default_server;
+    server_name _;
+    return 301 https://$host$request_uri;
+}
+
+server {
+#    listen 8080;
+    listen 4443 ssl;
     charset utf-8;
     client_max_body_size 50M;
+
+     ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
+     ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
 
     location / {
         proxy_pass http://web:8000;
